--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="you_denied_permission">Unfortunately, you denied the storage access permission!</string>
+    <string name="you_denied_permission">Unfortunately, you denied the storage access permission :(</string>
     <string name="remove">Remove</string>
 </resources>
